fix(order): fix amqp interface